# TEMPLATE-rle-assessment

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml  rle-assessment.code-workspace
.github/workflows/: deploy.yml
assets/: cog-viewer.mjs
config/: country_config.yaml  country_config.yaml.bogota  country_config.yaml.colombia
config/ecosystems/F1.1.1/: ecosystem.yaml
config/ecosystems/F1.1.2/: ecosystem.yaml
config/ecosystems/F1.1.4/: ecosystem.yaml
config/ecosystems/F1.1.5/: ecosystem.yaml
config/ecosystems/F1.1.6/: ecosystem.yaml
config/ecosystems/MFT1.1.1/: ecosystem.yaml
config/ecosystems/MFT1.1.2/: ecosystem.yaml
config/ecosystems/MFT1.1.3/: ecosystem.yaml
config/ecosystems/MFT1.2.2/: ecosystem.yaml
config/ecosystems/T1.1.1/: ecosystem.yaml
config/ecosystems/T1.1.10/: ecosystem.yaml
config/ecosystems/T1.1.11/: ecosystem.yaml
config/ecosystems/T1.1.12/: ecosystem.yaml
config/ecosystems/T1.1.13/: ecosystem.yaml
config/ecosystems/T1.1.14/: ecosystem.yaml
config/ecosystems/T1.1.15/: ecosystem.yaml
config/ecosystems/T1.1.17/: ecosystem.yaml
config/ecosystems/T1.1.18/: ecosystem.yaml
config/ecosystems/T1.1.2/: ecosystem.yaml
config/ecosystems/T1.1.20/: ecosystem.yaml
config/ecosystems/T1.1.22/: ecosystem.yaml
config/ecosystems/T1.1.23/: ecosystem.yaml
config/ecosystems/T1.1.24/: ecosystem.yaml
config/ecosystems/T1.1.25/: ecosystem.yaml
config/ecosystems/T1.1.26/: ecosystem.yaml
config/ecosystems/T1.1.27/: ecosystem.yaml
config/ecosystems/T1.1.3/: ecosystem.yaml
config/ecosystems/T1.1.4/: ecosystem.yaml
config/ecosystems/T1.1.5/: ecosystem.yaml
config/ecosystems/T1.1.7/: ecosystem.yaml
config/ecosystems/T1.1.8/: ecosystem.yaml
config/ecosystems/T1.1.9/: ecosystem.yaml
config/ecosystems/T1.2.10/: ecosystem.yaml
config/ecosystems/T1.2.18/: ecosystem.yaml
config/ecosystems/T1.2.3/: ecosystem.yaml
config/ecosystems/T1.2.7/: ecosystem.yaml
config/ecosystems/T1.2.9/: ecosystem.yaml
config/ecosystems/T1.3.1/: ecosystem.yaml
config/ecosystems/T1.3.10/: ecosystem.yaml
content/: 0.1_foreword.qmd  1.0_introduction.qmd  1.1_background.qmd  1.3_intro_iucn_rle.qmd  2_ecosystem_overview.qmd
docs/: GCP_SETUP.md
scripts/: 2_build_ecosystems_config.py  3_build_ecosystem_pages.py  _config.py  build_caches.py  build_ecosystem_index.py  build_ecosystem_pages.py  build_ecosystems.py  build_ecosystems_config.py  check_caches.py  init_repo.py  rasterize_ecosystem_to_cog.py  sync_ecosystems.py  upload_default_country_asset.py
templates/: assessment.qmd  crit_b.qmd
tests/: test_build_caches.py  test_check_caches.py  test_init_repo.py
(+271 files in other folders)
