[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
name = "TEMPLATE-rle-assessment"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.11"
jupyter = ">=1.1.1,<2"
quarto = ">=1.8.27,<2"
