[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
name = "TEMPLATE-rle-assessment"
requires-python = ">= 3.11"
version = "0.1.9"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
# For local development use the editable paths below:
# iucn_get_data = { path = "../iucn-get-data", editable = true }
# rle-python = { path = "../rle-python", editable = true, extras = ["viz"] }
# rle-python-gee = { path = "../rle-python-gee", editable = true }

# For production use:
iucn_get_data = { git = "https://github.com/RLE-Assessment/iucn-get-data" }
# TEMP: track rle-python GitHub HEAD (main) instead of the v0.2.0 tag.
# Revert to the tagged pin below once the fix is released.
# rle-python = { git = "https://github.com/RLE-Assessment/rle-python", tag = "v0.2.0", extras = ["viz"] }
rle-python = { git = "https://github.com/RLE-Assessment/rle-python", branch = "main", extras = ["viz"] }
rle-python-gee = { git = "https://github.com/RLE-Assessment/rle-python-gee", tag = "v0.2.1" }

wkls = ">=1.1.0, <2"

[tool.pixi.tasks]
tinytex-install = "quarto install tinytex"
# Rebuild the derived ecosystem layer (content/3_ecosystem_assessments/ + _quarto.yml
# chapters) from config/ecosystems/ before rendering, scaffolding config/ecosystems/
# from ecosystem_source if it is missing. Use `pixi run render` / `pixi run preview`
# (not raw `quarto render`), so the book config is consistent before Quarto reads it.
build-ecosystems = "python scripts/build_ecosystems.py"
render = { cmd = "quarto render", depends-on = ["build-ecosystems"] }
preview = { cmd = "quarto preview", depends-on = ["build-ecosystems"] }

[tool.pixi.dependencies]
python = "==3.11"
jupyter = ">=1.1.1,<2"
quarto = ">=1.8.27,<2"
pyyaml = ">=6.0.3,<7"
geopandas = ">=1.1.3,<2"
ipykernel = ">=7.2.0,<8"
pytest = ">=9.0.2,<10"
libgdal-arrow-parquet = ">=3.12.3,<4"

[tool.pixi.activation.env]
GOOGLE_CLOUD_PROJECT = "goog-rle-assessments"
